--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,9 +1,12 @@
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url(./_header.scss);
+@import './promociones';
+@import './contacto';
+@import './productos';
+@import './comocomprar';
+@import './index';
+@import './footer';
+@import './header';
+@import './mediaquerys'
+
 
 
 
