--- a/css/estilo.css
+++ b/css/estilo.css
@@ -307,18 +307,27 @@ form {
 
 main{ 
     width: 100vw;
-    height: 100vh;
+    height: auto;
     position: relative;
+
 }
 h3 {
-    margin: 15%;
+    margin-top: 9%;
+    text-align: center;
+    font-size: 5em;
+    color: #5B5B5B;
+}
+h4{ 
+    margin-top: 30%;
     text-align: center;
     font-size: 2em;
     color: #5B5B5B;
+
 }
 footer{
     position: absolute;
 }
+
 
 
 
